assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,700&family=Roboto:wght@300;700&display=swap');


* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    font-family: 'Nunito', sans-serif;
}

h1,
h2,
h3 {
    font-family: 'Roboto', sans-serif;
    letter-spacing: 1px;
}

h1 {
    color: #3C4043;
    text-transform: capitalize;
}

h2 {

    color: #3C4043;

}

h3 {
    color: #3C4043;
}

.hidden-heading {
    display: none;
}


/* Header section */

.header {
    background-color: #ffffff;
    padding: 3% 5%;
    position: fixed;
    z-index: 99;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-grow: 1;
}

.header a,
.header h1,
.header h2,
.header h3 {
    text-decoration: none;
    color: #3C4043;
}

/*Size of the Logo for Mobile version*/
.header {
    font-size: 80%;
}

.logo {
    text-align: right;
}

.logo-img {
    width: 40%;
}

/* Navbar styles with dropdown toggle */
.navigation-bar {
    font-size: 110%;
    letter-spacing: 1px;
    position: absolute;
    background-color: inherit;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    /*box-shadow: 0 2px 2px #3a3a3a;*/
    display: none;
    top: 100%;
}

.navigation-bar>a {
    margin-bottom: 1em;
    width: fit-content;
}

.active {
    border-bottom: 1px solid #3C4043;
}

/* Navigation toggle */
#nav-toggle:checked~.navigation-bar {
    display: flex;
    flex-direction: column;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 1.5rem;
}

/* Score bar*/
.score-bar {
    display: none;
}

.score-bar p {
    font-weight: bold;
    font-size: medium;
}

/* Main area */

main {
    margin-top: 65px;
    padding: 3% 5% 3% 5%;
    position: fixed;
    width: 100%;
}

.game-area1 {
    background-color: #CDDEF5;
    border-radius: 10px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    flex-grow: 1;
    overflow-y: scroll;
}

.game-area2 {
    background-color: #CDDEF5;
    border-radius: 10px;
    width: 100%;
    display: none;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    flex-grow: 1;
}

.image-area {
    display: flex;
    justify-content: center;
    align-items: center;
}

.game-logo {
    border-radius: 10px;
    width: 80%;
    height: 80%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.info-area {
    margin-top: 20px;
    margin-bottom: 20px;
    width: 80%;
    height: 80%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.index-title a {
    text-decoration: none;
    color: #3C4043;
}

p {
    text-align: center;
    margin-top: 10%;
}

.control-area {
    margin-top: 10%;
    margin-bottom: 10%;
    width: 80%;
    height: 80%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.start-button {
    background-color: #1967D2;
    text-align: center;
    border-radius: 3px;
    color: #ffffff;
    font-weight: bold;
    padding: 3% 5% 3% 5%;
}

.start-button a {
    text-decoration: none;
    color: #ffffff;
}

/*Game section*/
form {
    margin-top: 20px;
}

select {
    border-radius: 5px;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'Nunito', sans-serif;
    color: #3C4043;
    font-size: medium;
    font-weight: 700;
}

.welcome-image {
    margin-top: 20px;
    border-radius: 10px;
    width: 80%;
    height: 80%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.go-button {
    background-color: #1967D2;
    text-align: center;
    border-radius: 3px;
    color: #ffffff;
    font-weight: bold;
    padding: 3% 5% 3% 5%;
}

.go-button a {
    text-decoration: none;
    color: #ffffff;
}

/* Instructions section */

#instructions {
    overflow: hidden;
    overflow-y: scroll;
    max-height: 33em;
    line-height: 1em;
    margin-bottom: auto;
}

/* Contact section */

#email {
    text-decoration: none;
    color: #1967D2;
    margin-top: 10%;
    font-weight: bold;
}


/* Questions section */
.game-questions-area {
    background-color: #CDDEF5;
    border-radius: 10px;
    width: 100%;
    display: none;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    flex-grow: 1;
}

.question-area {
    margin-top: 20px;
}

.question-area>h1 {
    text-align: center;
}

.question-area>p {
    margin-left: 5%;
    margin-right: 5%;
}

.answer-area {
    margin-top: 20px;
    margin-bottom: 20px;
    width: 80%;
    height: 80%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column wrap;
}

.answer-option {
    font-weight: 700;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 5%;
    margin-right: 5%;
    background-color: #1967D2;
    color: #ffffff;
    text-align: center;
    border-radius: 3px;
    padding: 3% 5% 3% 5%;
    text-decoration: none;
}

.next-question {
    background-color: #1967D2;
    text-align: center;
    border-radius: 3px;
    color: #ffffff;
    font-weight: bold;
    padding: 3% 5% 3% 5%;
}

.finish {
    background-color: #1967D2;
    text-align: center;
    border-radius: 3px;
    color: #ffffff;
    font-weight: bold;
    padding: 3% 5% 3% 5%;
}

.finish a {
    text-decoration: none;
    color: #ffffff;
}

.final-area {
    background-color: #CDDEF5;
    border-radius: 10px;
    width: 100%;
    display: none;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    flex-grow: 1;
}

.final-score>p {
    font-weight: bold;
}

/* Footer */
.footer {
    background-color: #ffffff;
    margin-top: auto;
}

.social-networks {
    text-align: center;
    padding: 2%;
    display: flex;
    justify-content: center;
    flex-direction: row;
    border-top: solid 1px #CDDEF5;
    background-color: #CDDEF5;
}

.social-networks>p {
    font-size: 70%;
    margin-top: 10px;
    margin-bottom: 10px;
    text-decoration: none;
    color: #3C4043;
    font-weight: bold;
}

.social-networks i {
    font-size: 1.2rem;
}


/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Navigation bar */
    .header {
        padding: 1%;
        padding-top: 2%;
    }

    .header .logo {
        font-size: 100%;
        line-height: 75px;
        margin: 0 0.5rem;
        height: 60px;
        padding-right: 2rem;
    }

    .score-bar > p {
        margin-top: 0px;
        margin-bottom: 1em;
    }

    .navigation-bar {
        display: flex;
        flex-direction: row;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-left: 2rem;
    }

    .navigation-bar>a {
        display: flex;
        width: fit-content;
        margin-right: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    /* Game section */
    .control-area {
        margin-top: 5%;
        margin-bottom: 3%;
    }

    .welcome-image {
        width: 60%;
        height: 60%;
    }

    .info-area{
        margin-bottom: 0px;
    }

    .info-area > p {
        margin-top: 5%;
    }

    /* Instructions section */
    #instructions{
        max-height: 31em;
    }

    #instructions3{
        margin-bottom: 10px;
    }

    /* Contact section */
    #email{
        margin-top: 5%;
        margin-bottom: 5%;
    }
}

/* Media query: laptops and larger (992px and up) */
@media screen and (min-width: 992px) {
    
    /* General */
    main{
        padding: 3%;
    }

    p {
        font-size: large;
    }

    /* Header */

    .navigation-bar a:hover {
        border-bottom: 1px solid #1967D2;
    }


    /* Game section */
    .start-button{
        padding: 2% 3% 2% 3%;
    }

    .welcome-image{
        width: 35%;
        height: 35%;
    }

    .info-area > p {
        margin-top: 2%;
    }

    select{
        font-size: large;
    }

    .control-area{
        margin-top: 2%;
        margin-bottom: 1%;
    }

    .go-button{
        padding: 2% 3% 2% 3%;
    }

    .answer-option{
        padding: 1% 2% 1% 2%;
        font-size: large;
    }

    /* Instructions section */
    #instructions{
        max-height: 36em;
    }

    /* Finish section */
    .finish{
        padding: 2% 3% 2% 3%;
    }

    /* Footer */
    .social-networks {
        padding: 1%;
    }
    .social-networks>p {
        font-size: large;
    }

}

